Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11185

MGC lock leak

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • Lustre 2.11.0, Lustre 2.12.0
    • None
    • 3
    • 9223372036854775807

      Regression introduced by 4335d232c3e6fa144d0a2d5e49264761e91b38c7.
      It takes additional cld reference to the lock, but lock forget to cancel
      during normal shutdown. So this lock holds cld on the list for a long time.
      And any config modification needs to cancel each lock separately.

      Additional bug exist, when lock is obtained but don't processed and marked as lost lock, so two locks objects refers to the single cld instance.

            shadow Alexey Lyashkov
            shadow Alexey Lyashkov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: